<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="3dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/business_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/cupcakeconer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/usernameRegisterText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/business_image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameRegisterText"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/your_name_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/txtname"
        app:layout_constraintTop_toBottomOf="@id/business_image" />

    <TextView
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="40dp"
        android:text="@string/e_mail"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegisterText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailRegisterText"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/your_e_mail_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/pwd"
        app:layout_constraintTop_toBottomOf="@id/usernameRegisterText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/password_"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailRegisterText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordLoginText"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/your_password_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@id/emailRegisterText" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="254dp"
        android:layout_height="62dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="#F8B79E"
        android:text="@string/sign_up"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="126dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginText"
        app:layout_constraintBottom_toTopOf="@id/signupButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cupcake" />

    <Button
        android:id="@+id/loginButtonsignup"
        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_marginTop="208dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/login"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginText" />


</androidx.constraintlayout.widget.ConstraintLayout>
