<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivityUser">

    <!-- Top App Bar -->

    <!-- Back Button -->

    <!-- ImageView for Logo -->

    <!-- Grid Layout for Menu Options -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="336dp"
        android:layout_height="289dp"
        android:contentDescription="@string/cupcake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cupcake" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuGridLayout"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.5">

        <!-- Categories Button -->
        <Button
            android:id="@+id/btnCategoriesUser"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_square"
            android:backgroundTint="#FFFFFF"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMyOrdersUser" />

        <!-- My Orders Button -->
        <Button
            android:id="@+id/btnMyOrdersUser"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_square"
            android:backgroundTint="#B55151"
            android:text="@string/my_orders"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toEndOf="@id/btnCategoriesUser"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- My Account Button -->
        <Button
            android:id="@+id/btnMyAccountUser"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_square"
            android:text="@string/my_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCategoriesUser"
            app:layout_constraintEnd_toStartOf="@id/btnSpecialRequestsUser" />

        <!-- Special Requests Button -->
        <Button
            android:id="@+id/btnSpecialRequestsUser"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_square"
            android:text="About Us"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toEndOf="@id/btnMyAccountUser"
            app:layout_constraintTop_toBottomOf="@id/btnMyOrdersUser"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
